# finance-agent

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CODEBUDDY.md  CONTEXT.md  README.md  _dbg_icbc.py  _debug.txt  _debug_grid.py  _debug_table_lines.py  _layout_debug.py  _test_icbc.py  analyze_receipt.py  build-ohos.ps1  package-lock.json  package.json  receipt_363_all_fields.txt  receipt_363_result.txt  receipt_final_test.txt  receipt_ocr_dump.txt  receipt_test_931_2.txt  receipt_test_result.txt  receipt_test_result_v2.txt  receipt_test_result_v3.txt  receipt_test_result_v4.txt  receipt_test_result_v5.txt  receipt_test_result_v6.txt  receipt_test_result_v7.txt  update-ohos.ps1
apps/python/: 363-1_result.json  _rt_hook_onnxruntime.py  actual_fields.txt  bridge.spec  cell_text_merge.txt  debug_counterparty.py  debug_fields.py  debug_fields2.py  debug_fields3.py  debug_fields4.py  debug_grid.py  debug_grid2.py  debug_split.py  debug_steps.py  field_debug.txt  field_debug2.txt  field_debug3.txt  field_debug4.txt  final_test.py  final_test_results.json  ocr_block_assignment.txt  ocr_label_analysis.txt  ocr_misrecognition_analysis.txt  pyproject.toml  quick_test.py  quick_test.txt  receipt_grid_visualization.txt  test_actual_fields.py  test_fields.py  test_fields_reimport.py  test_garbage.py  test_grid.py  test_grid_output.txt  test_receipt_parser.py  test_reload.py  update-backend.ps1  update-hnp.ps1  update-hnp.sh
apps/python/src/: bridge.py  data.db  data.db-shm  data.db-wal
apps/python/tests/: conftest.py  debug_colmap.py  test_account_registry.py  test_cmb_opening_balance.py  (+20 more)
(+171 files in other folders)
