[tool.poetry]
name = "finance-agent-backend"
description = "Python backend for finance-agent"
version = "0.3.1"
authors = ["Python C <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
nanobot = "^0.4.0"
pymupdf = "^1.24.0"
openpyxl = "^3.1.0"
opencv-python = "^4.8"
rapidocr-onnxruntime = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
